--- a/src/app/feature-modules/home-page/sports-list/sports-list.component.html
+++ b/src/app/feature-modules/home-page/sports-list/sports-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  sports-list works!
-</p>
+
+  <label  *ngFor="let sport of sportsData; let i = index">
+    <input type ="checkbox">
+    {{sportsData[i]['title']}}
+  </label>
+  <button>submit</button>
+
