--- a/src/app/feature-modules/nav/nav.component.css
+++ b/src/app/feature-modules/nav/nav.component.css
@@ -1,3 +1,9 @@
-.navbar{
-    margin-bottom: 10px;
+.container-fluid{
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
+ul.nav { text-align: center; }
+
+ul.nav.navbar-nav { display: inline-block; }
