--- a/src/app/feature-modules/home-page/sports-list/sports-list.component.html
+++ b/src/app/feature-modules/home-page/sports-list/sports-list.component.html
@@ -14,5 +14,5 @@
     <input type="checkbox" [formControlName]="i" value=" {{sportsData[i].title}}">
     {{sportsData[i].title}}
     </label>
-  <button>submit</button>
+  <button class="nav-item nav-link-edit" [routerLink]="['bets']">submit</button>
 </form>
