--- a/src/app/feature-modules/home-page/sports-list/sports-list.component.html
+++ b/src/app/feature-modules/home-page/sports-list/sports-list.component.html
@@ -1,18 +1,13 @@
-<!-- <div class = "form-group">
-  <label  *ngFor="let sport of sportsData; let i = index">
-    <input (change)="checkCheckBoxvalue($event)"  type ="checkbox" value = "{{sportsData[i]['title']}}"
-    >
-    {{sportsData[i]['title']}}
-  </label>
-  </div>
-  <button (click)="submit()">submit</button>
-
- -->
 
  <form [formGroup]="form" (ngSubmit)="submit()">
+   <div class="pretty p-default">
   <label formArrayName = "sportsData" *ngFor="let sport of form.controls.sportsData.controls; let i = index">
+    
     <input type="checkbox" [formControlName]="i" value=" {{sportsData[i].title}}">
     {{sportsData[i].title}}
     </label>
+   
+  </div>
+  
   <button class="nav-item nav-link-edit" [routerLink]="['bets']">submit</button>
 </form>
