data logging on other component and api being called

--- a/src/app/feature-modules/betting-view-home/betting-view-home.component.html
+++ b/src/app/feature-modules/betting-view-home/betting-view-home.component.html
@@ -1,4 +1,6 @@
-<p>
-  betting-view-home works!
-</p>
-<textarea>{{data}}</textarea>
+<ul>
+  <li *ngFor="let sport of this.showTheseSports">
+    {{sport}}
+  </li>
+
+</ul>
